app05/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app05
  labels:
    istio-injection: enabled
