app05/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app05-v1
  namespace: app05
  labels:
    app: app05
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app05
      version: v1
  template:
    metadata:
      labels:
        app: app05
        version: v1
    spec:
      containers:
        - image: wizhubdocker8s/istio-demo:latest
          imagePullPolicy: Always
          name: app05
          ports:
            - name: http
              containerPort: 8080
