app05/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app05-svc
  namespace: app05
  labels:
    app: app05
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: app05
