app05/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app05-destination
  namespace: app05
spec:
  host: app05-svc
  subsets:
    - name: v1
      labels:
        version: v1
