app05/virtual-service-no-fault.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app05-virtual-service
  namespace: app05
spec:
  hosts:
    - app05-svc
  http:
    - route:
        - destination:
            host: app05-svc
            subset: v1
          weight: 100
